--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 未知国家-4.81MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
-  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-13.74MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: v6d1.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v6d1.moonfree.top}}
-  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-14.26MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
+  - {name: 未知国家-2.04MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
+  - {name: 🇨🇳 中国-20.09MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-19.63MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.88MB/s(Youtube:不良林), server: 140.83.82.32, port: 20194, type: vmess, uuid: 71f6a39d-ee6b-477b-af0a-78a41a6bd637, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.53MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇯🇵 日本-18.71MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 未知国家-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.26MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-20.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
