--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-18.71MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
-  - {name: 🇺🇸 美国-5.80MB/s(Youtube:不良林), server: us2.asasas.top, port: 18117, type: vmess, uuid: 80efa71b-a164-3057-bdfd-ed28521256fe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: us2.asasas.top}}
-  - {name: 🇺🇸 美国-13.46MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
-  - {name: 🇯🇵 日本-5.39MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.00MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.89MB/s(Youtube:不良林), server: linsg.n.optage.moe, port: 44605, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: linsg.n.optage.moe, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-8.81MB/s(Youtube:不良林), server: 139.162.47.114, port: 44605, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-4.07MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.12MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.59MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.75MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 台湾-2.81MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-637.5KB/s(Youtube:不良林), server: v6d1.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v6d1.moonfree.top}}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-9.78MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 未知国家-683.4KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-18.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-13.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
