--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.12MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.59MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.75MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 台湾-2.81MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-637.5KB/s(Youtube:不良林), server: v6d1.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v6d1.moonfree.top}}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-9.78MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 未知国家-683.4KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-12.71MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-9.35MB/s(Youtube:不良林), server: 139.162.47.114, port: 44605, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-683.4KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
   - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇮🇳 印度-3.00MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-637.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 未知国家-683.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
